--- a/css/style.css
+++ b/css/style.css
@@ -1042,3 +1042,37 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   background-color: #0097a7;
   box-shadow: 0 0 10px #00bcd4;
 }
+.humanities-course h1 {
+  font-size: 2.3rem;
+  font-family: 'Lora', serif;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #00bcd4;
+}
+
+.humanities-course h2 {
+  font-size: 1.5rem;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #f0f0f0;
+}
+
+.humanities-course p {
+  font-size: 1.05rem;
+  line-height: 1.6;
+  margin: 15px 0;
+  text-align: justify;
+}
+
+.humanities-course em {
+  color: #bbbbbb;
+}
+
+.humanities-course blockquote {
+  font-style: italic;
+  color: #ccc;
+  border-left: 4px solid #00bcd4;
+  padding-left: 15px;
+  margin: 30px 0;
+}
