--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,13 @@ main.courses-page .courses-grid {
 
 /* --- Styles for before-we-begin.html & about.html --- */
 /* === ABOUT ME PAGE Specific Layout === */
-
+.name-center {
+  margin-top: 60px; /* Push it down from nav */
+  position: relative;
+  top: 0;
+  transform: none;
+  z-index: 10;
+}
 .before-we-begin {
   position: relative;
   display: flex;
