--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ nav {
   height: 65px;
   object-fit: contain;
   margin: 0 auto;
+  z-index: 1100;
 }
 /* --- Hamburger Menu --- */
 .hamburger-menu { display: none; flex-direction: column; justify-content: center; align-items: center; gap: 4px; width: 45px; height: 50px; z-index: 1100; position: fixed; top: 0; right: 15px; cursor: pointer; transition: transform 0.3s ease; }
