--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ main {
 }
 
 /* --- Navbar --- */
-nav { background-color: white; height: 60px; padding: 0 20px; width: 100%; position: fixed; top: 40; left: 0; right: 0; z-index: 1000; display: flex; justify-content: center; align-items: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6); transition: padding 0.3s ease, height 0.3s ease; }
+nav { background-color: white; height: auto; padding: 10px 20px; width: 100%; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; display: flex; justify-content: center; align-items: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6); transition: padding 0.3s ease, height 0.3s ease; }
  .nav-container { display: flex; align-items: center; width: 100%; max-width: 1200px; justify-content: center; }
 #nav-links { list-style: none; gap: 20px; margin: 0; padding: 0; display: flex; justify-content: center; }
 #nav-links li { display: inline-block; }
