--- a/css/style.css
+++ b/css/style.css
@@ -1082,8 +1082,8 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   margin: 30px 0;
 }
 .honors-banner {
-  display: block;
-  height: 45px;
+  height: 60px;
   object-fit: contain;
+  max-width: none;
   margin-right: auto;
 }
