--- a/css/style.css
+++ b/css/style.css
@@ -1082,8 +1082,9 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   margin: 30px 0;
 }
 .honors-banner {
-  height: 100px;
+  display: block;
+  height: 70px; /* Try 80px or more */
   object-fit: contain;
-  max-width: none;
-  margin-right: auto;
+  max-width: 100%;
+  z-index: 998;
 }
