--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,9 @@ nav { background-color: rgba(0, 0, 0, 0.85); height: 100px; padding: 5px 0; widt
   display: block;
   margin: 0;
   padding: 0;
-}: 1200px; justify-content: center; }
+  max-width: 1200px;
+  justify-content: center; 
+ }
 #nav-links { list-style: none; gap: 20px; margin: 0; padding: 0; display: flex; justify-content: center; }
 #nav-links li { display: inline-block; }
 #nav-links li a { font-family: 'Nunito', sans-serif; color: black; text-decoration: none; font-size: 1.2rem; font-weight: 600; padding: 8px 15px; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; }
