--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,9 @@ nav { background-color: rgba(0, 0, 0, 0.85); height: 100px; padding: 5px 0; widt
   width: auto;
   object-fit: contain;
   object-position: center;
-  display: block;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  margin: 0 auto;
+  padding: 0 20;
   max-width: 1200px;
   justify-content: center; 
  }
