--- a/function-heart.css
+++ b/function-heart.css
@@ -1,14 +1,3 @@
-body {
-    background-color: #1c1c1c;
-    font-family: 'Nunito', sans-serif;
-    color: #f0f0f0;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: background-color 0.3s ease, padding-top 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
 
 .heart {
   fill: red;
@@ -58,4 +47,21 @@ body {
   left: 0;
   right: 0;
   z-index: 1;
+}
+#obal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 500px;
+  z-index: 0; /* Adjust if you want it behind or in front */
+  pointer-events: none; /* lets users click through it */
+}
+
+canvas#c {
+  width: 100% !important;
+  height: 100% !important;
+  background: transparent !important;
+  display: block;
 }
