--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,13 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   color: #00bcd4;
   margin-bottom: 30px;
 }
+/* Mobile Adjustments (< 768px) */
+@media (max-width: 767px) {
+    #nav-links { display: none; }
+    .hamburger-menu { display: flex; height: 50px; top: 0; right: 15px; }
+    .nav-container { justify-content: center; }
+    nav { height: 50px; }
+    body { padding-top: 50px; }
 
 }
     /* Mobile Grid Layout for Courses */
