--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ nav { background-color: white; height: 60px; padding: 0 20px; width: 100%; posit
   text-align: left;
   line-height: 1.7;
 }
-.section-row {
+.info-row {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
