--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,11 @@ nav { background-color: white; height: 60px; padding: 0 20px; width: 100%; posit
   transform: translateY(-3px);
   box-shadow: 0 0 25px rgba(0, 188, 212, 0.35);
 }
-.info-box h3 {
+.grid-box .info-box h3 {
   text-align: center;
+}
+.grid-row .info-row p {
+    text-align: center;
 }
 .personal-heading {
   text-align: center;
