--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ nav { background-color: white; height: 60px; padding: 0 20px; width: 100%; posit
   margin-top: 40px;
   margin-bottom: 15px;
   text-align: center;
-  color: #00bcd4;
+  color: #f0f0f0;
   font-family: 'Lora', serif;
 }
 
