--- a/css/style.css
+++ b/css/style.css
@@ -1191,3 +1191,20 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   padding-left: 15px;
   margin: 30px 0;
 }
+.night {
+  position: fixed;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  filter: blur(0.1vmin);
+  background-image:
+    radial-gradient(ellipse at top, transparent 0%, #000),
+    radial-gradient(ellipse at bottom, #000, rgba(145, 233, 255, 0.2)),
+    repeating-linear-gradient(220deg, black 0px, black 19px, transparent 19px, transparent 22px),
+    repeating-linear-gradient(189deg, black 0px, black 19px, transparent 19px, transparent 22px),
+    repeating-linear-gradient(148deg, black 0px, black 19px, transparent 19px, transparent 22px),
+    linear-gradient(90deg, #00fffa, #f0f0f0);
+}
