--- a/css/style.css
+++ b/css/style.css
@@ -1208,3 +1208,25 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
     repeating-linear-gradient(148deg, black 0px, black 19px, transparent 19px, transparent 22px),
     linear-gradient(90deg, #00fffa, #f0f0f0);
 }
+.social-course h1 {
+  font-size: 2.3rem;
+  font-family: 'Lora', serif;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #00bcd4;
+}
+
+.social-course h2 {
+  font-size: 1.5rem;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #f0f0f0;
+}
+
+.social-course p {
+  font-size: 1.05rem;
+  line-height: 1.6;
+  margin: 15px 0;
+  text-align: justify;
+}
